[package]
name = "vmmalloc-sys"
version = "0.1.0"
authors = ["Ryan Leung <rleungx@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["vmmalloc", "ffi"]
repository = "https://github.com/rleungx/pmdk-rs"
homepage = "https://github.com/rleungx/pmdk-rs"
build = "build.rs"
links = "vmmalloc"

[dependencies]

[build-dependencies]
bindgen = "0.44"
pmdk-builder = { path = "../pmdk-builder" }
